# XMCart90

./: .gitignore  CMakeLists.txt  README.md  emu_codes.h  files11.h  main.c  main.h  msc_disk.c  tusb_config.h  usb_descriptors.c
MK90-programs/Sources/FSManager/: xmcman.mac
MK90-programs/Sources/FSManager_EN/: Makefile  xmcman.mac
MK90-programs/Sources/ISMenu/: xmcism.mac
MK90-programs/Sources/ISMenu_EN/: Makefile  xmcism.mac
MK90-programs/Sources/SMP-Man/: Makefile  smpman.mac
MK90-programs/Sources/SMP-Man_EN/: smpman.mac
MK90-programs/Sources/Unmount/: Makefile  xmucreat.mac  xmumount.mac
MK90-programs/Sources/Unmount/bitmap/: gazou2mk.py  written.mk90
cartcrash/: Makefile  cartcrash.h  cartcrash.mac
fatfs/: diskio.c  ff.c  ff.h  ffconf.h
